--- a/.github/workflows/licensed.yml
+++ b/.github/workflows/licensed.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     name: Check licenses
     steps:
       - uses: actions/checkout@v2
